--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,6 @@
 DB_URI=mongodb+srv://arjun2000raj:hhw2ZUEehKGrJb9L@cluster0.bczqsya.mongodb.net/?retryWrites=true&w=majority
 PORT=8000
+NODE_ENV=DEVELOPMENT
+COOKIE_EXPIRES_TIME=7
+JWT_SECRET=fdsjs_fjdsklaj_34fsal_kfdsja
+JWT_EXPIRES_TIME=15d
