--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "arjun",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "NODE_ENV=DEVELOPMENT nodemon index.js",
+    "prod": "NODE_ENV=PRODUCTION nodemon index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,7 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
